# [metadata]
# # replace with your username:
# name = Hermes-lnestelroad
# version = 0.0.1
# author = Liam Nestelroad
# author_email = nestelroadliam@gmail.com
# description = A python message bus architecture with zeromq
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = https://github.com/lnestelroad/Hermes
# project_urls =
#     Bug Tracker = https://github.com/lnestelroad/Hermes/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

# [options]
# package_dir =
#     = Hermes
# packages = find:
# python_requires = >=3.6
# install_requires =
#     msgpack
#     netifaces
#     pyaml
#     pyuv
#     PyYAML
#     pyzmq
#     toml

# [options.packages.find]
# where = Hermes